tests/compiler/errors/const_fn_non_const_call.casa
# expect: SYNTAX

fn regular x:int -> int { x 1 + }

const fn bad x: int->int { x regular }
const RESULT { 5 bad }
